--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -4,9 +4,387 @@
       "language": "لغة",
       "french": "فرنسي",
       "arabic": "عرب"
-    }
+    },
+    "ajouter": "يضيف",
+    "modifier": "للتعديل",
+    "supprimer": "لحذف",
+    "valider": "للتحقق من صحة",
+    "rejeter": "للرفض",
+    "affect_region": "تعيين المناطق",
+    "modifier_profil": "تحرير ملفات التعريف",
+    "activer/desactiver": "مفعل وغير مفعل",
+    "helloWorld": "مرحبا بالعالم",
+    "authentificationTitle": "تسجيل الدخول",
+    "username": "اسم االمستخدم",
+    "password": "كلمه السر",
+    "ministere_agriculture": "وزارة الزراعة",
+    "signin": "بدء تسجيل الدخول",
+    "signin_error": "الرجاء إدخال المعلومات الصحيحة",
+    "fill_form_error": "املأ الاستمارة بالكامل",
+    "dashboard": "لوحة القيادة",
+    "list_fiches": "قائمة الملفات",
+    "gestion_fiches": "إدارة الملفات",
+    "settings": "الإعدادات",
+    "stock": "مخزون",
+    "gestion_users": "إدارة المستخدمين",
+    "rejetees_card": "مرفوض",
+    "attente_card": "في الانتظار",
+    "fiches_card": "الملفات",
+    "validees_card": "تم تأكيد",
+
+    "rejected": "مرفوض",
+    "rejected_one": "مرفوض",
+    "pending": "في الانتظار",
+    "validated": "تم تأكيد",
+    "validated_one": "تم تأكيد",
+
+    "campaign": "حملة",
+    "campaign_list": "قائمة الحملات",
+    "campaigns": "الحملات",
+    "start_date": "تاريخ البداية",
+    "end_date": "تاريخ الانتهاء",
+    "gestion_campagnes": "إدارة الحملات",
+    "gestion_intrants_agricoles": "إدارة المدخلات الزراعية",
+    "full_name": "الإسم الكامل",
+    "login": "الإسم المستخدم",
+    "email": "البريد الإلكتروني",
+    "telephone": "رقم الهاتف",
+    "profile": "الملف الشخصي",
+
+    "new_fiche_statistic": "إضافة ملف",
+    "new_campaign": "إضافة حملة",
+    "new_intrant": "إضافة مدخل زراعي",
+    "name_intrant": "إسم المدخل",
+    "nni": "الرقم الوطني للتعريف",
+    "superficie": "المساحة الزراعية",
+    "latitude": "خط العرض",
+    "longitude": "خط الطول",
+    "region": "الولاية",
+    "save": "حفظ",
+    "intrants_agricoles": "المدخلات الزراعية",
+    "select_intrant": "إختيار مدخل زراعي",
+    "cancel": "إالغاء",
+    "quantity": "المقدار",
+    "update": "تحديث",
+    "detail_fiche": "تفاصيل الملف",
+    "update_fiche_statistic": "تحديث الملف",
+    "edit_fiche_statistic": "تعديل الملف",
+
+    "bad_data_entry": "الرجاء إدخال بيانات صحيحة",
+    "no_intrant_selected": "لم يتم تحديد أي إدخال",
+    "details": "التفاصيل",
+    "error_dates_choices": "لا يمكن أن يسبق تاريخ الانتهاء تاريخ البدء",
+    "operation_success": "تمت العملية بنجاح",
+    "operation_not_success": "لم تتم العملية",
+    "campaign_detail": "تفاصيل الحملة",
+    "edit_campaign": "تعديل الحملة",
+    "can_not_delete_campaign": "تعذر حذف حملة نشطة",
+    "active": "نشيط",
+    "oui": "نعم",
+    "non": "لا",
+    "export_data_success": "تم تصدير البيانات بنجاح إلى المجلد \"تنزيل\"",
+
+    "my_space": "مساحتي",
+    "turn_on_network": "الرجاء تشغيل الشبكة",
+    "exportation": "تصدير البيانات ",
+    "close": "أغلق",
+    "suppression": "عملية حذف",
+    "continuer":  "استمر",
+    "crop_type":  "نوع المحاصيل",
+    "confirm_operation": "هل أنت متأكد من تنفيذ هذه العملية؟",
+    "phone_number": "رقم الهاتف",
+    "phone_exemple": "مثال: ",
+    "status": "الحالة",
+    "language": "اللغة",
+    "log_out": "تسجيل خروج",
+    "welcome": "اهلا و سهلا بكم",
+    "list_is_emplty": "القائمة فارغة...",
+    "is_connected": "متصل بالشبكة"
   },
   "navbar" : {
-
-  }
+    "gestion_subventions": "إدارة المنح",
+    "home": "ترحيب",
+    "gestion_stock": "إدارة المخزون",
+    "rep_subventions": "توزيع المنح",
+    "Campagne_Agricole": "الحملة الزراعية",
+    "def_intrant": "تعريف المدخلات",
+    "def_campagne": "تعريف الحملة",
+    "evaluation_marché": "تقييم السوق",
+    "fiche_suivi": "ورقة تتبع النشاط",
+    "commission_recessement": "لجنة الإسكان",
+    "commission_evalution": "لجنة التقييم",
+    "gestion_personnel": "ادارة شخصية",
+    "gestion_utilisateur": "إدارةالمستخدم"
+  },
+  "dashbord": {
+    "title": "لوحة القيادة",
+    "zone_subvention": "منطقة الدعم",
+    "nni": "رقم الهوية",
+    "name": "الإسم واللقب",
+    "subvention": "منحة",
+    "Instance_subvention": "هيئة المنحة",
+    "subvention_engrais": "دعم الأسمدة",
+    "subvention_herbi": "دعم مبيدات الأعشاب"
+  },
+  "rapartition_stock": {
+    "title": "جبر الإعانات",
+    "list" : "قائمة الحملات",
+    "detail": "تفاصيل الحملة",
+    "select": "حدد حملة",
+    "table" : {
+      "code": "مشفر",
+      "description": "وصف الحملة",
+      "montant": "ارتفاع",
+      "libelle": "الصياغة",
+      "quantite": "مقدار",
+      "unite": "وحدة",
+      "prix_unitaire": "سعر الوحدة",
+      "farmerFirstName": "الاسم الأول للمزارع",
+      "farmerLastName": "لاسم الأخير للمزارع",
+      "farmerNNI": "تحديد المزارع",
+      "acreage": "مساحة",
+      "longitude": "خط الطول",
+      "latitude": "خط العرض",
+      "quantity_de_sortie": "كمية دي الترتيب"
+    }
+  },
+  "intrants": {
+    "title": "تعريف الحاجة إلى المدخلات الزراعية",
+    "form": {
+      "libele": "إدخال التسمية",
+      "Description": "وصف",
+      "unite_mesure": "وحدة القياس",
+      "prix_unitaire": "سعر الوحدة / كجم",
+      "valider": "للتحقق من صحة",
+      "placeholder": {
+        "libele": "اكتب التسمية ...",
+        "Description": "اكتب وصفا...",
+        "unite_mesure" : "حدد وحدة القياس",
+        "prix_unitaire": "أدخل سعر الوحدة للكيلو جرام"
+      },
+      "ajouter": "يضيف",
+      "modifier": "للتعديل",
+      "supprimer": "لحذف"
+    },
+    "table" : {
+      "libele": "إدخال التسمية",
+      "Description": "وصف",
+      "unite_mesure": "وحدة القياس",
+      "Date_creation": "تاريخ الإنشاء",
+      "detail": "قطاعي",
+      "option": "خيار"
+    }
+  },
+  "campagne": {
+    "title": "التعبير عن الحاجة: التخطيط المؤقت",
+    "creation": "إنشاء حملة جديدة\nزراعي",
+    "init": "الشروع في",
+    "ajout_campagne": "إضافة حملة زراعية",
+    "campagne_agricole": "ريف\nالزراعة",
+    "form": {
+      "ajout":"إضافة حملة زراعية",
+      "code": "رمز الحملة",
+      "description": "وصف",
+      "intrant": "إدخال",
+      "quantité": "مقدار",
+      "date_debut": "تاريخ البداية",
+      "date_fin": "تاريخ الانتهاء",
+      "valider": "للتحقق من صحة"
+    },
+    "table": {
+      "campage" : "ريف",
+      "subventions": "الإعانات",
+      "Quantite": "كمية",
+      "Unite": "وحدة",
+      "Prix": "السعر (MRU)",
+      "total": "مجموع",
+      "validation": "تصديق",
+      "Valide": "صالح",
+      "en-attente": "في الانتظار",
+      "option": "خيار"
+    },
+    "detail": {
+      "header": "تفاصيل حملة زراعية:",
+      "campagne": "الحملة الزراعية",
+      "description": "وصف",
+      "intrant": "إدخال",
+      "prix": "السعر",
+      "quantite": "كمية",
+      "total": "مجموع",
+      "date_debut": "تاريخ البداية",
+      "date_fin": "تاريخ الانتهاء"
+    },
+    "edit": {
+      "title": "تحرير حملة زراعية:",
+      "intrat": "داخل الولاية",
+      "campagne_agricole": "الحملة الزراعية",
+      "prix": "السعر",
+      "quantite": "كمية",
+      "valider": "صالح"
+    },
+    "add": {
+      "tile": "إضافة مدخلات إلى حملة زراعية:",
+      "campagne": "الحملات",
+      "quantite": " quantité"
+    }
+  },
+  "fiche-suivi": {
+    "fiche-activite": "ورقة تتبع نشاط الحملة",
+    "select-campagne": "حدد حملة",
+    "info-general": "معلومات عامة",
+    "explotation": "عملية",
+    "donnees-technique": "لبيانات التقنية",
+    "recapitulatif": "ملخص",
+    "info" : {
+      "wilaya": "المحافظة*",
+      "moughataa": "مغاطة",
+      "commune": "كومونة",
+      "telephone": "هاتف",
+      "whatsApp": "ال WhatsApp",
+      "num_tel": "رقم الهاتف",
+      "numero_whatsapp": "رقم الواتس اب",
+      "name": "اسم المبروز *",
+      "email": "بريد إلكتروني",
+      "adresse": "عنوان البريد الإلكتروني",
+      "info": "معلومات عامة"
+    },
+    "info_general": {
+      "site" : "موقع*",
+      "nom_site": "اسم الموقع",
+      "coordonnee": "معلومات شخصية*",
+      "latitude": "خط العرض",
+      "longitude": "خط الطول",
+      "responsable": "مسؤول*",
+      "nom_responsable": "اسم المسؤول",
+      "sup_potentielle": "إمكانية إضافية ليتم استغلالها",
+      "sup_emblavée": "سوب إمبلافيه"
+    },
+    "suivant": "التالي",
+    "info_exp": {
+      "info": "معلومات المزرعة",
+      "nature": "نوع العملية*",
+      "select": {
+        "select_":"حدد طبيعة العملية",
+        "cooperative": "تعاوني",
+        "familiale": "أسرة",
+        "privee": "خاص"
+      },
+      "nombre_adherant":"عدد من أعضاء",
+      "nombre_benéficiant": "عدد المستفيدين",
+      "nombre": "عدد",
+      "materiel_agricole": "المواد الزراعية *",
+      "type": "نوع",
+      "etat": "حالة",
+      "observation": "الملاحظة",
+      "eau_irrigation": "مياه الري*",
+      "source_eau": "مصدر المياه",
+      "select_source": "حدد مصدر الري",
+      "puisards": "أحواض",
+      "puits": "نحن سوف",
+      "forage": "حفر",
+      "robinet": "صنبور",
+      "marc_lac": "مارك / ليك",
+      "moyens_exhaure": "وسائل الضخ",
+      "select_moyen": "حدد وسائل نزح المياه",
+      "manuel": "كتيب",
+      "gmp": "GMP",
+      "solaire": "شمسي",
+      "electrique": "كهربائي",
+      "systéme_irrigation": "نظام الري",
+      "nature_Sol": "نوع التربة",
+      "nature_Sol_placeholder": "نوع التربة الخاصة بك",
+      "principale_techniques": "التقنيات الرئيسية *",
+      "technique_vulgarise": "تقنية مشهورة",
+      "selection_technique": "تعميم اختيار التقنيات",
+      "preparation_compost": "تحضير السماد",
+      "confection_planches": "تحضير الألواح الخشبية وجذوع الأشجار",
+      "fumure_organique": "السماد العضوي القاعدي",
+      "fumure_minerale": "السماد المعدني الأساسي",
+      "entretien_pepinieres": "صيانة الحضانة",
+      "traitement_repiquage": "العلاج في الحضانة قبل الزرع",
+      "repiquage": "الزرع",
+      "desherbage": "إزالة الأعشاب الضارة",
+      "binage": "العزق",
+      "buttage": "هيلينج",
+      "tuteurage": "دروس خصوصية",
+      "fertilisation_couverture": "غطاء الإخصاب",
+      "traitement_ennemis_culture": "علاج أعداء المحاصيل",
+      "traitement_post_recolte": "الحصاد ومعالجة ما بعد الحصاد",
+      "type_fertelisant": "نوع الأسمدة",
+      "quantite_utilisee": "الكمية المستخدمة",
+      "precedent": "سابق",
+      "suivant": "التالي",
+      "speculations": "تكهنات",
+      "varietes": "أصناف",
+      "superficie": "مساحة",
+      "Date_pepiniere":"تاريخ البذر في الحضانة",
+      "date_repiquage": "تاريخ الزرع",
+      "stade_cultrure": "مرحلة الزراعة",
+      "situation_phytosanitaire": "حالة الصحة النباتية",
+      "select_phytosanitaire": "حدد حالة الصحة النباتية",
+      "ennemies": "عداء",
+      "maladies": "الأمراض",
+      "moyens_lutte": "وسائل السيطرة / العلاجات",
+      "observation": "ملاحظة",
+      "observation_situation": "مراقبة الوضع"
+    }
+  },
+  "recensement": {
+    "import_recensement": "تعداد الواردات",
+    "telecharger": "قم بتنزيل اللوحة القماشية",
+    "select": "حدد حملة",
+    "import": "يستورد",
+    "valider": "للتحقق من صحة",
+    "table": {
+      "cin": "بطاقة تعريف",
+      "superficie": "مساحة"
+    }
+  },
+  "comm_evaluation": {
+    "title": "لجنة التقييم",
+    "select" : "حدد حملة",
+    "table": {
+      "nni": "رقم الهوية",
+      "name": "الإسم واللقب",
+      "superficie": "مساحة",
+      "subvention": "منحة",
+      "etat": "حالة"
+    },
+    "statut": {
+      "valide": "صالح",
+      "en_attente": "في الانتظار"
+    }
+  },
+  "gestion_utilisateur": {
+    "title": "إدارةالمستخدم",
+    "code": "مشفر",
+    "role": "وظيفة",
+    "matricule": "رقم التسجيل",
+    "status": "حالة",
+    "actif": "نشيط",
+    "inactif": "عاطل",
+    "nom_utilisateur": "إسم المستخدم",
+    "mot_de_passe": "كلمة السر",
+    "liste_role": "قائمة الأدوار",
+    "liste_region": "قائمة المناطق",
+    "modif_region":"تغيير مناطق المستخدم",
+    "region": "المناطق",
+    "region_": "منطقة",
+    "header1": "تحرير ملفات تعريف المستخدم",
+    "select_profil": "حدد ملفات التعريف"
+  },
+  "Trarza":"ترارزة",
+  "Tiris Zemmour": "تيريس زمور",
+  "Tagant":"تاغانت",
+  "Nouakchott":"نواكشوط",
+  "Inchiri":"انشير",
+  "Hodh El Gharbi":"الحوض الغر",
+  "Hodh Ech Chargui": "حوض شرقي",
+  "Guidimaka": "غيديماكا",
+  "Gorgol": "جورجول",
+  "Dakhlet Nouadhibou": "دخلة نواذيبو",
+  "Brakna": "براكنا",
+  "Assaba": "عصابة",
+  "Adrar": "درار",
+  "stock_error": "يوجد خطأ!"
 }
