--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -4,9 +4,389 @@
       "language": "Langue",
       "french":  "Français",
       "arabic": "Arabe"
-    }
+    },
+    "helloWorld": "Hello World!",
+    "@helloWorld": {
+      "description": "The conventional newborn programmer greeting"
+    },
+    "ajouter": "Ajouter",
+    "modifier": "Modifier",
+    "supprimer": "Supprimer",
+    "valider": "Valider",
+    "rejeter": "Rejeter",
+    "affect_region": "Affecter des Regions",
+    "modifier_profil": "Modifier Profils",
+    "activer/desactiver": " Activer/Desactiver",
+    "authentificationTitle": "Authentification",
+    "username": "Login",
+    "password": "Mot de passe",
+    "ministere_agriculture": "Ministère de l'agriculture",
+    "signin": "S'authentifier",
+    "signin_error": "Erreur de login ou de mot de passe.",
+    "fill_form_error": "Veuillez remplir les champs.",
+    "dashboard": "Tableau de board",
+    "list_fiches": "Liste des fiches",
+    "gestion_fiches": "gestion des fiches",
+    "gestion_users": "gestion des utilisateurs",
+    "stock": "Stock",
+    "settings": "paramètres",
+    "validees_card": "VALIDEES",
+    "fiches_card": "FICHES",
+    "attente_card": "EN ATTENTE",
+    "rejetees_card": "REJETEES",
+
+    "campaign": "Campagne",
+    "campaign_list": "Liste des campagnes",
+    "campaigns": "Campagnes",
+    "start_date": "Date début",
+    "end_date": "Date fin",
+    "gestion_intrants_agricoles": "Gestion des intrants",
+    "gestion_campagnes": "Gestion des campagnes",
+    "full_name": "Nom complet",
+    "login": "Nom d'utilisateur",
+    "email": "Email",
+    "telephone": "Téléphone",
+    "profile": "Profile",
+
+    "new_fiche_statistic": "Nouvelle fiche statistique",
+    "new_campaign": "Nouvelle campagne",
+    "update_fiche_statistic": "Mise à jour de la fiche",
+    "edit_campaign": "Modifier campagne",
+    "edit_fiche_statistic": "Mise à jour de la fiche",
+    "new_intrant": "Nouveau intrant",
+    "name_intrant": "Nom intrant",
+    "detail_fiche": "Détail fiche",
+    "nni": "NNI",
+    "superficie": "Superficie",
+    "latitude": "Latitude",
+    "longitude": "Longitude",
+    "region": "Région",
+    "save": "Enregistrer",
+    "intrants_agricoles": "Intrants agricoles",
+    "select_intrant": "Selection d'intrant",
+    "cancel": "Annuler",
+    "quantity": "Quantité",
+    "rejected": "REJETEES",
+    "rejected_one": "REJETEE",
+    "pending": "EN ATTENTE",
+    "validated": "VALIDEES",
+    "validated_one": "VALIDEE",
+
+    "update": "Mettre à jour",
+    "bad_data_entry": "Veuillez renseigner des données correctes",
+    "no_intrant_selected": "Veuillez sélectionner un intrant",
+    "details": "Détails",
+    "error_dates_choices": "Date fin ne peut pas précédé date de début",
+    "operation_success": "Effectué avec succès",
+    "operation_not_success": "Pas effectué avec succès",
+    "campaign_detail": "Détails campagne",
+    "can_not_delete_campaign": "Impossible de supprimer une campagne active",
+    "oui": "NON",
+    "active": "Actif(ve)",
+    "non": "NON",
+    "export_data_success": "Données exportes avec succees vers le dossier \"Download\"",
+
+    "my_space": "Mon espace",
+    "turn_on_network": "Veuillez activer la connection d'abord.",
+    "exportation":  "Exportation",
+    "close":  "Fermer",
+    "continuer":  "Continuer",
+    "suppression": "Suppression",
+    "confirm_operation": "Êtes-vous sûr de vouloir éxécuter cette opération ?",
+    "crop_type": "Type de culture",
+    "phone_number": "Téléphone",
+    "phone_exemple": "exemple: ",
+    "status": "Statut",
+    "language": "Langue",
+    "log_out": "Se déconnecter",
+    "welcome": "Vous êtes la bienvenue",
+    "list_is_emplty": "La liste est vide...",
+    "is_connected": "connecté"
   },
   "navbar" : {
-
-  }
+    "gestion_subventions": "GESTION DES SUBVENTIONS",
+    "home": "Accueil",
+    "gestion_stock": "GESTION DE STOCK",
+    "rep_subventions": "Répartition des subventions",
+    "Campagne_Agricole": "CAMPAGNE AGRICOLE",
+    "def_intrant": "Définition des intrants",
+    "def_campagne": "Définition d'une campagne",
+    "evaluation_marché": "Evaluation du Marché",
+    "fiche_suivi": "Fiche de Suivi des activités",
+    "commission_recessement": "Comission de recessement",
+    "commission_evalution": "Commission d'evaluation",
+    "gestion_personnel": "Gestion Personnels",
+    "gestion_utilisateur": "Gestion des Utilisateurs"
+  },
+  "dashbord": {
+    "title": "Tableau de bord",
+    "zone_subvention": "Zone de subvention",
+    "nni": "NNI",
+    "name": "Nom et prenom",
+    "subvention": "Subvention",
+    "Instance_subvention": "Instance de subvention",
+    "subvention_engrais": "subvention en engrais",
+    "subvention_herbi": "subvention en herbicides"
+  },
+  "rapartition_stock": {
+    "title": "Reparatition des subventions",
+    "list" : "Liste des Campagnes",
+    "detail": "Detail de la campagne",
+    "select": "selectionner une campagne",
+    "table" : {
+      "code": "code",
+      "description": "Description Campagne",
+      "montant": "Montant",
+      "libelle": "Libellé",
+      "quantite": "Quantité",
+      "unite": "Unité",
+      "prix_unitaire": "Prix unitaire",
+      "farmerFirstName": "Prénom Fermier",
+      "farmerLastName": "Nom Fermier",
+      "farmerNNI": "Fermier NNI",
+      "acreage": "superficie",
+      "longitude": "longitude",
+      "latitude": "latitude",
+      "quantity_de_sortie": "Quantité de sortie"
+    }
+  },
+  "intrants": {
+    "title": "Définition de besoin d'Intrants Agricol",
+    "form": {
+      "libele": "Libellé de l'Intrant",
+      "Description": "Description",
+      "unite_mesure": "Unité de Messure",
+      "prix_unitaire": "Prix Unitaire / Kg",
+      "valider": "Valider",
+      "placeholder": {
+        "libele": "Ecrire le Libellé ... ",
+        "Description": "Ecrire une Description ... ",
+        "unite_mesure" : "selection unité de messure",
+        "prix_unitaire": "saisir le prix unitaire par Kg"
+      },
+      "ajouter": "Ajouter",
+      "modifier": "Modifier",
+      "supprimer": "Supprimer"
+    },
+    "table" : {
+      "libele": "Libellé de l'Intrant",
+      "Description": "Description",
+      "unite_mesure": "Unité de Messure",
+      "Date_creation": "Date Creation",
+      "detail": "detail",
+      "option": "Option"
+    }
+  },
+  "campagne": {
+    "title": "Expression de besoin: Planning prévisionnel",
+    "creation": "Creation d'une nouvelle Campagne Agricole",
+    "init": "initier",
+    "ajout_campagne": "Ajout d'une Campagne Agricole",
+    "campagne_agricole": "CAMPAGNE AGRICOLE",
+    "form": {
+      "ajout":"Ajout d'une Campagne Agricole",
+      "code": "Code de la Campagne",
+      "description": "Description",
+      "intrant": "Intrant",
+      "quantité": "quantité",
+      "date_debut": "Date Debut",
+      "date_fin": "Date Fin",
+      "valider": "Valider"
+    },
+    "table": {
+      "campage" : "Campagne",
+      "subventions": "Subventions",
+      "Quantite": "Quantitée(s)",
+      "Unite": "Unité",
+      "Prix": "Prix (MRU)",
+      "total": "Total",
+      "validation": "Validation",
+      "Valide": "Validé",
+      "en-attente": "en attente",
+      "option": "Option"
+    },
+    "detail": {
+      "header": "Detail d'une Campagne Agricole :",
+      "campagne": "CAMPAGNE AGRICOLE",
+      "description": "Description",
+      "intrant": "Intrant",
+      "prix": "Prix",
+      "quantite": " Quantitée(s)",
+      "total": "Total",
+      "date_debut": "Date Debut",
+      "date_fin": " Date Fin"
+    },
+    "edit": {
+      "title": "Modification d'une Campagne Agricole :",
+      "intrat": "Intrat",
+      "campagne_agricole": "CAMPAGNE AGRICOLE",
+      "prix": "Prix",
+      "quantite": " Quantitée(s)",
+      "valider": "Valider"
+    },
+    "add": {
+      "tile": "Ajout d'un Intrant dans une Campagne Agricole :",
+      "campagne": "CAMPAGNES",
+      "quantite": " quantité"
+    }
+  },
+  "fiche-suivi": {
+    "fiche-activite": "Fiche de suivi des activités de la campagne",
+    "select-campagne": "selectionner une campagne",
+    "info-general": "Infos Générale",
+    "explotation": "Exploitation",
+    "donnees-technique": "Données Techniques",
+    "recapitulatif": "Récapitulatif",
+    "info" : {
+      "wilaya": "Wilaya*",
+      "moughataa": "Moughataa",
+      "commune": "Commune",
+      "telephone": "Téléphone",
+      "whatsApp": "WhatsApp",
+      "num_tel": "Numero de téléphone",
+      "numero_whatsapp": "Numero WhatsApp",
+      "name": "Nom de l'Encadreur*",
+      "email": "Email",
+      "adresse": "Adresse Mail",
+      "info": "info general"
+    },
+    "info_general": {
+      "site" : "Site*",
+      "nom_site": "Nom du site",
+      "coordonnee": "Coordonnées*",
+      "latitude": "Latitude",
+      "longitude": "Longitude",
+      "responsable": "Responsable*",
+      "nom_responsable": "nom du responsable",
+      "sup_potentielle": "Sup potentielle á exploiter",
+      "sup_emblavée": "Sup Emblavée"
+    },
+    "suivant": "Suivant",
+    "info_exp": {
+      "info": "Informations de l'exploitation",
+      "nature": "Nature de l'exploitation*",
+      "select": {
+        "select_":"selectionner la nature de l'exploitation",
+        "cooperative": "Coopérative",
+        "familiale": "Familiale",
+        "privee": "Privée"
+      },
+      "nombre_adherant":"Nombre d'adhérents",
+      "nombre_benéficiant": "Nombre de bénéficiaires",
+      "nombre": "nombre",
+      "materiel_agricole": "Matériel Agricole*",
+      "type": "type",
+      "etat": "etat",
+      "observation": "observation",
+      "eau_irrigation": "Eau d'irrigation*",
+      "source_eau": "source d'eau",
+      "select_source": "selectionner la source d'irrigation",
+      "puisards": "Puisards",
+      "puits": "Puits",
+      "forage": "Forage",
+      "robinet": "Robinet",
+      "marc_lac": "Marc / Lac",
+      "moyens_exhaure": "Moyens d'exhaure",
+      "select_moyen": "selectionner le Moyen d'exhaure",
+      "manuel": "Manuel",
+      "gmp": "GMP",
+      "solaire": "Solaire",
+      "electrique": "Electrique",
+      "systéme_irrigation": "Systéme d'irrigation",
+      "nature_Sol": "Nature du Sol",
+      "nature_Sol_placeholder": "Nature de votre sol",
+      "principale_techniques": "Principale Techniques*",
+      "technique_vulgarise": "Technique vulgarisées",
+      "selection_technique": "selection des technique vulgarisées",
+      "preparation_compost": "Preparation du Compost",
+      "confection_planches": "Confection des Planches et des billons",
+      "fumure_organique": "Fumure de fond Organique",
+      "fumure_minerale": "Fumure de fond Minérale",
+      "entretien_pepinieres": "Entretien des pépiniéres",
+      "traitement_repiquage": "Traitement de pépiniére avant le repiquage",
+      "repiquage": "Repiquage",
+      "desherbage": "Desherbage",
+      "binage": "Binage",
+      "buttage": "Buttage",
+      "tuteurage": "Tuteurage",
+      "fertilisation_couverture": "Fertilisation de couverture",
+      "traitement_ennemis_culture": "Traitement des ennemis des cultures",
+      "traitement_post_recolte": "Traitement de récolte et post-récolte",
+      "type_fertelisant": "Type de Fertélisant",
+      "quantite_utilisee": "Quantité utilisée",
+      "precedent": "Précédent",
+      "suivant": "Suivant",
+      "speculations": "Spéculations",
+      "varietes": "Variétés",
+      "superficie": "Superficie",
+      "Date_pepiniere":"Date de sémis en pépiniére",
+      "date_repiquage": "Date de repiquage",
+      "stade_cultrure": "Stade de cultrure",
+      "situation_phytosanitaire": "Situation phytosanitaire",
+      "select_phytosanitaire": "selectionner la Situation phytosanitaire",
+      "ennemies": "Ennemies",
+      "maladies": "Maladies",
+      "moyens_lutte": "Moyens de lutte / traitements",
+      "observation": "Observation",
+      "observation_situation": "Observation de la situation"
+    }
+  },
+  "recensement": {
+    "import_recensement": "Import Recensement",
+    "telecharger": "Télécharger le canevas",
+    "select": "selectionner une campagne",
+    "import": "Import",
+    "valider": "Valider",
+    "table": {
+      "cin": "CIN",
+      "superficie": "Superficie"
+    }
+  },
+  "comm_evaluation": {
+    "title": "Commission d'evaluation",
+    "select" : "selectionner une campagne",
+    "table": {
+      "nni": "NNI",
+      "name": "Nom et prenom",
+      "superficie": "Superficie",
+      "subvention": "Subvention",
+      "etat": "Etat"
+    },
+    "statut": {
+      "valide": "Validé",
+      "en_attente": "en attente"
+    }
+  },
+  "gestion_utilisateur": {
+    "title": "Gestions des utilisateurs",
+    "code": "code",
+    "role": "role",
+    "matricule": "Matricule",
+    "status": "Status",
+    "actif": "Actif",
+    "inactif": "Inactif",
+    "nom_utilisateur": "Nom d'utilisateur",
+    "mot_de_passe": "Mot de passe",
+    "liste_role": "Liste des Roles",
+    "liste_region": "Liste des Regions",
+    "modif_region":"Modification des regions d'un utilisateur",
+    "region": "REGIONS",
+    "region_": "region",
+    "header1": "Modification Profils d'un utilisateur",
+    "select_profil": "Selectionnez les Profils"
+  },
+  "Trarza": "Trarza",
+  "Tiris Zemmour": "Tiris Zemmour",
+  "Tagant": "Tagant",
+  "Nouakchott":"Nouakchott",
+  "Inchiri":"Inchiri",
+  "Hodh El Gharbi":"Hodh El Gharbi",
+  "Hodh Ech Chargui":"Hodh Ech Chargui",
+  "Guidimaka":"Guidimaka",
+  "Gorgol":"Gorgol",
+  "Dakhlet Nouadhibou":"Dakhlet Nouadhibou",
+  "Brakna":"Brakna",
+  "Assaba":"Assaba",
+  "Adrar":"Adrar",
+  "stock_error": "Erreur trouvée !"
 }
