profil page add

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -386,5 +386,14 @@
   "Brakna": "براكنا",
   "Assaba": "عصابة",
   "Adrar": "درار",
-  "stock_error": "يوجد خطأ!"
+  "stock_error": "يوجد خطأ!",
+  "profile":{
+    "title" : "حساب تعريفي",
+    "nom_user": "اسم المستخدم",
+    "edit_profil": "تعديل الملف الشخصي",
+    "nni": "رقم الهوية",
+    "email": "بريد إلكتروني",
+    "tel": "هاتف",
+    "reseigner": "لكي يعلم"
+  }
 }
